<resources>
    <string name="app_name">FoodExpenditure</string>

    <string name="title_activity_content"></string>

    <string name="hello_world">Hello world!</string>

    <string name="about_title">About</string>
    <string name="help_title">Help</string>

    <string name="about_message">This Food Expenditure app is developed by Bushra Mohamed for the MAP524 Assignment.

                                 This app demonstrates the spending trend for food by Canadian families for the year 2012 and 2013.
                                 The data obtained can be useful for research and business purposes.

                                 All data is obtained from the Government of Canada Open Data
    </string>


    <string name="help_message">When the app launches for the first time, select the desired province (the default is Canada) and click the ’SEARCH’ button.
                                You will be presented with average family food expenditure for the selected province. You may then select the desired food
                                category from the list on the left and the detail information for the particular food category will be presented on the right
                                of the screen. </string>

    <string name="select_province">Select A Region</string>
    <string name="search_button">Search</string>
    <string name="quite_button">Quit</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>

    <string name="title_detail_spending">Average family spending</string>
    <string name="title_detail_year1">2012</string>
    <string name="title_detail_year2">2013</string>
    <string name="title_detail_avgSpending">% From Total Spending</string>


</resources>
