<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false">


    <LinearLayout
        android:id="@+id/ListsLayout"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/provinceListView"
            android:layout_gravity="bottom"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/DetailLayout"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="#fffff1e4"
        android:weightSum="1">


        <RelativeLayout

            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/foodTitle"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:capitalize="characters"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/foodImageView"
                android:src="@raw/grocimg"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="177dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_detail_spending"
                android:id="@+id/textView6"
                android:textSize="17dp"
                android:layout_alignBottom="@+id/foodImageView"
                android:layout_alignLeft="@+id/foodImageView"
                android:layout_alignStart="@+id/foodImageView"
                android:layout_marginBottom="27dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_detail_year1"
                android:id="@+id/textView5"
                android:layout_alignBottom="@+id/foodImageView"
                android:layout_alignLeft="@+id/foodImageView"
                android:layout_alignStart="@+id/foodImageView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/spending2012"
                android:textSize="15dp"
                android:layout_above="@+id/spending2013"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_detail_year2"
                android:id="@+id/textView8"
                android:layout_below="@+id/textView5"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/spending2013"
                android:layout_alignTop="@+id/textView8"
                android:layout_alignLeft="@+id/spending2012"
                android:layout_alignStart="@+id/spending2012"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_detail_avgSpending"
                android:id="@+id/textView7"
                android:layout_below="@+id/textView8"
                android:layout_alignLeft="@+id/textView8"
                android:layout_alignStart="@+id/textView8"
                android:layout_marginTop="28dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_detail_year1"
                android:id="@+id/textView9"
                android:layout_below="@+id/textView7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="28dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_detail_year2"
                android:id="@+id/textView10"
                android:layout_below="@+id/textView9"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/pctSpending12"
                android:textSize="15dp"
                android:layout_above="@+id/pctSpending13"
                android:layout_alignRight="@+id/textView7"
                android:layout_alignEnd="@+id/textView7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/pctSpending13"
                android:textSize="15dp"
                android:layout_alignTop="@+id/textView10"
                android:layout_alignLeft="@+id/pctSpending12"
                android:layout_alignStart="@+id/pctSpending12" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>